Fixed issue with dataViewer which meant you couldn't use arrows keys to scroll.  Added note to DataViewer.py about how to copy a row of data.

--- a/ui/dataViewer.ui
+++ b/ui/dataViewer.ui
@@ -34,7 +34,7 @@ QTableWidget QHeaderView::section {
       <set>QAbstractItemView::NoEditTriggers</set>
      </property>
      <property name="selectionMode">
-      <enum>QAbstractItemView::NoSelection</enum>
+      <enum>QAbstractItemView::ContiguousSelection</enum>
      </property>
      <property name="selectionBehavior">
       <enum>QAbstractItemView::SelectItems</enum>
