--- a/ui/RunningAverage.ui
+++ b/ui/RunningAverage.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>205</width>
+    <width>275</width>
     <height>84</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Average over n groups</string>
+        <string>Average over n sequential samples</string>
        </property>
       </widget>
      </item>
