--- a/ui/RunningAverage.ui
+++ b/ui/RunningAverage.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>275</width>
+    <width>400</width>
     <height>84</height>
    </rect>
   </property>
@@ -25,6 +25,16 @@
      </item>
      <item>
       <widget class="QSpinBox" name="spinBox"/>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="checkBox">
+       <property name="toolTip">
+        <string extracomment="Apply filter to processed data."/>
+       </property>
+       <property name="text">
+        <string>Processed Data</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
